--- a/index.html
+++ b/index.html
@@ -18,44 +18,52 @@
 
         <main>
             <div class="etape">
-                <h2 id="toggle-heading1">Étape 1 <svg id="bottom-arrow1" viewBox="0 0 100 100" width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(180 50 50)"/></svg><svg id="top-arrow1"viewBox="0 0 100 100" width="30" height="30" style="display: none;"><polygon points="50,0 100,100 0,100" fill="#fffff"/></svg></h2>
+                <h2 id="toggle-heading1"><svg id="arrow1" viewBox="0 0 100 100" width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 1</h2>
                 <div class="content" id="toggle-content1" style="display: none;">
                     <div class="compte_a_rebours" id="compte_a_rebours1"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours1", "Feb 6 18:00:00 2023", "Tu es attendue pour 19h30 au métro Strasbourg - Saint-Denis.<br>Ça t'intrigues ?");</script>
+                    <script type="text/javascript">compte_a_rebours("compte_a_rebours1", "Feb 7 18:00:00 2023", "Tu es attendue pour 19h30 au métro Strasbourg - Saint-Denis.<br>Ça t'intrigues ?");</script>
                 </div>
             </div>
 
             <div class="etape">
-                <h2 id="toggle-heading2">Étape 2 <svg id="bottom-arrow2" viewBox="0 0 100 100"  width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(180 50 50)"/></svg><svg id="top-arrow2"viewBox="0 0 100 100"  width="30" height="30" style="display: none;"><polygon points="50,0 100,100 0,100" fill="#fffff"/></svg></h2>
+                <h2 id="toggle-heading2"><svg id="arrow2" viewBox="0 0 100 100"  width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 2</h2>
                 <div class="content" id="toggle-content2" style="display: none;">
                     <div class="compte_a_rebours" id="compte_a_rebours2"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours2", "Feb 6 19:40:00 2023", "Maintenant qu'on s'est retrouvés, rendez-vous au 10 Rue Blondel.<br>Tu penses qu'on va faire quoi ?");</script>
+                    <script type="text/javascript">compte_a_rebours("compte_a_rebours2", "Feb 7 19:40:00 2023", "Maintenant qu'on s'est retrouvés, allons au 10 Rue Blondel.<br>Tu penses qu'on va faire quoi ?");</script>
                 </div>
             </div>
 
             <div class="etape">
-                <h2 id="toggle-heading3">Étape 3 <svg id="bottom-arrow3" viewBox="0 0 100 100"  width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(180 50 50)"/></svg><svg id="top-arrow3"viewBox="0 0 100 100"  width="30" height="30" style="display: none;"><polygon points="50,0 100,100 0,100" fill="#fffff"/></svg></h2>
+                <h2 id="toggle-heading3"><svg id="arrow3" viewBox="0 0 100 100"  width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 3</h2>
                 <div class="content" id="toggle-content3" style="display: none;">
                     <div class="compte_a_rebours" id="compte_a_rebours3"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours3", "Feb 6 21:10:00 2023", "Alors, tu as aimé ? J'éspère que vous avez réussi à sortir à temps sinon c'est un peu la honte.<br>Je commence à avoir un peu faim, pas toi ? Et si on allait au 12 Rue Beaurepaire ?");</script>
+                    <script type="text/javascript">compte_a_rebours("compte_a_rebours3", "Feb 7 21:15:00 2023", "Alors, tu as aimé ? J'éspère qu'on a réussi à sortir à temps sinon c'est un peu la honte.<br>Je commence à avoir un peu faim, pas toi ? Et si on allait au 12 Rue Beaurepaire ?");</script>
                 </div>
             </div>
             
             <div class="etape">
-                <h2 id="toggle-heading4">Étape 4 <svg id="bottom-arrow4" viewBox="0 0 100 100" width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(180 50 50)"/></svg><svg id="top-arrow4"viewBox="0 0 100 100"  width="30" height="30" style="display: none;"><polygon points="50,0 100,100 0,100" fill="#fffff"/></svg></h2>
+                <h2 id="toggle-heading4"><svg id="arrow4" viewBox="0 0 100 100" width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 4</h2>
                 <div class="content" id="toggle-content4" style="display: none;">
                     <div class="compte_a_rebours" id="compte_a_rebours4"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours4", "Feb 6 23:00:00 2023", "Que de Nostalgie, moi en tout cas ça me rappelle de bons souvenirs...<br>Que dirais-tu d'aller faire un tour par là : 48.870840, 2.365726 pour finir la soirée.");</script>
+                    <script type="text/javascript">compte_a_rebours("compte_a_rebours4", "Feb 7 22:15:00 2023", "Je crois que j'ai quelque chose pour toi dans mon sac, tu veux voir ?");</script>
                 </div>
             </div>
 
             <div class="etape">
-                <h2 id="toggle-heading5">Étape 5 <svg id="bottom-arrow5" viewBox="0 0 100 100"  width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(180 50 50)"/></svg><svg id="top-arrow5"viewBox="0 0 100 100"  width="30" height="30" style="display: none;"><polygon points="50,0 100,100 0,100" fill="#fffff"/></svg></h2>
+                <h2 id="toggle-heading5"><svg id="arrow5" viewBox="0 0 100 100"  width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 5</h2>
                 <div class="content" id="toggle-content5" style="display: none;">
                     <div class="compte_a_rebours" id="compte_a_rebours5"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours5", "Feb 6 23:15:00 2023", "Voilà c'est fini, j'éspère que ça ta plu. L'année prochaine c'est à toi de tout organiser !<br> Maintenant direction le 23 rue de Picpus, 4e étage, Porte 2, paillasson avec les étoiles.");</script>
+                    <script type="text/javascript">compte_a_rebours("compte_a_rebours5", "Feb 7 23:00:00 2023", "Que de Nostalgie ce bistrot, moi en tout cas ça me rappelle de bons souvenirs...<br>Que dirais-tu d'aller faire un tour par là : 48.870840, 2.365726 pour finir la soirée ?");</script>
                 </div>
             </div>
+
+            <div class="etape">
+                <h2 id="toggle-heading6"><svg id="arrow6" viewBox="0 0 100 100"  width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 6</h2>
+                <div class="content" id="toggle-content6" style="display: none;">
+                    <div class="compte_a_rebours" id="compte_a_rebours6"></div>
+                    <script type="text/javascript">compte_a_rebours("compte_a_rebours6", "Feb 7 23:15:00 2023", "Voilà c'est fini, j'éspère que ça ta plu. L'année prochaine c'est à toi de tout organiser !<br> Maintenant direction le 23 rue de Picpus, 4e étage, Porte 2, paillasson avec les étoiles.");</script>
+                </div>
+            </div>            
         </main>    
     </body>
 </html>
