--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h2 id="toggle-heading1"><svg id="arrow1" viewBox="0 0 100 100" width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 1</h2>
                 <div class="content" id="toggle-content1" style="display: none;">
                     <div class="compte_a_rebours" id="compte_a_rebours1"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours1", "Feb 18 18:00:00 2025", "Tu es attendue pour 19h30 au métro Strasbourg - Saint-Denis.<br>Ça t'intrigues ?");</script>
+                    <script type="text/javascript">compte_a_rebours("compte_a_rebours1", "Feb 18 18:00:00 2025", "Tu peux rentrer tranquillement à la maison pour commencer.<br>De mon côté je devrais être là vers 19h, j'espère que je ne vais pas être trop en retard...");</script>
                 </div>
             </div>
 
@@ -29,7 +29,7 @@
                 <h2 id="toggle-heading2"><svg id="arrow2" viewBox="0 0 100 100"  width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 2</h2>
                 <div class="content" id="toggle-content2" style="display: none;">
                     <div class="compte_a_rebours" id="compte_a_rebours2"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours2", "Feb 18 19:40:00 2025", "Maintenant qu'on s'est retrouvés, allons au 10 Rue Blondel.<br>Tu penses qu'on va faire quoi ?");</script>
+                    <script type="text/javascript">compte_a_rebours("compte_a_rebours2", "Feb 18 19:00:00 2025", "Si t'es rentrée avant moi, j'espère que tu en a profité pour faire plein de câlin à Titi !<br>Tu peux aussi continuer le super puzzle chat de l'année dernière, ça serait vraiment dommage de pas le finir !<br>Si tu veux tu peux aussi te préparer parce qu'après on re-sort.");</script>
                 </div>
             </div>
 
@@ -37,7 +37,7 @@
                 <h2 id="toggle-heading3"><svg id="arrow3" viewBox="0 0 100 100"  width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 3</h2>
                 <div class="content" id="toggle-content3" style="display: none;">
                     <div class="compte_a_rebours" id="compte_a_rebours3"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours3", "Feb 18 21:15:00 2025", "Alors, tu as aimé ? J'éspère qu'on a réussi à sortir à temps sinon c'est un peu la honte.<br>Je commence à avoir un peu faim, pas toi ? Et si on allait au 12 Rue Beaurepaire ?");</script>
+                    <script type="text/javascript">compte_a_rebours("compte_a_rebours3", "Feb 18 19:50:00 2025", "Faut pas qu'on tarde à y aller, ça serait bien qu'on soient avant 20h30 au métro Strasbourg - Saint-Denis.<br>C'est le même endroit que la dernière fois, tu crois que c'est un coïncidence ? Tu penses qu'on va faire quoi ?");</script>
                 </div>
             </div>
             
@@ -45,7 +45,7 @@
                 <h2 id="toggle-heading4"><svg id="arrow4" viewBox="0 0 100 100" width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 4</h2>
                 <div class="content" id="toggle-content4" style="display: none;">
                     <div class="compte_a_rebours" id="compte_a_rebours4"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours4", "Feb 18 22:15:00 2025", "Je crois que j'ai quelque chose pour toi dans mon sac, tu veux voir ?");</script>
+                    <script type="text/javascript">compte_a_rebours("compte_a_rebours4", "Feb 18 20:30:00 2025", "Je crois que j'ai quelque chose à te donner (seulement si tu le demandes très poliement)");</script>
                 </div>
             </div>
 
@@ -53,7 +53,7 @@
                 <h2 id="toggle-heading5"><svg id="arrow5" viewBox="0 0 100 100"  width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 5</h2>
                 <div class="content" id="toggle-content5" style="display: none;">
                     <div class="compte_a_rebours" id="compte_a_rebours5"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours5", "Feb 18 23:00:00 2025", "Que de Nostalgie ce bistrot, moi en tout cas ça me rappelle de bons souvenirs...<br>Que dirais-tu d'aller faire un tour par là : 48.870840, 2.365726 pour finir la soirée ?");</script>
+                    <script type="text/javascript">compte_a_rebours("compte_a_rebours5", "Pas encore trouvé...");</script>
                 </div>
             </div>
 
@@ -61,7 +61,7 @@
                 <h2 id="toggle-heading6"><svg id="arrow6" viewBox="0 0 100 100"  width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 6</h2>
                 <div class="content" id="toggle-content6" style="display: none;">
                     <div class="compte_a_rebours" id="compte_a_rebours6"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours6", "Feb 18 23:15:00 2025", "Voilà c'est fini, j'éspère que ça ta plu. L'année prochaine c'est à toi de tout organiser !<br> Maintenant direction le 23 rue de Picpus, 4e étage, Porte 2, paillasson avec les étoiles.");</script>
+                    <script type="text/javascript">compte_a_rebours("compte_a_rebours6", "Feb 18 23:59:00 2025", "Pas encore trouvé...");</script>
                 </div>
             </div>            
         </main>    
