--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h2 id="toggle-heading5"><svg id="arrow5" viewBox="0 0 100 100"  width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 5</h2>
                 <div class="content" id="toggle-content5" style="display: none;">
                     <div class="compte_a_rebours" id="compte_a_rebours5"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours5", "Pas encore trouvé...");</script>
+                    <script type="text/javascript">compte_a_rebours("compte_a_rebours5", "Feb 18 23:00:00 2025","Pas encore trouvé...");</script>
                 </div>
             </div>
 
