--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <h2 id="toggle-heading4"><svg id="arrow4" viewBox="0 0 100 100" width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 4</h2>
                 <div class="content" id="toggle-content4" style="display: none;">
                     <div class="compte_a_rebours" id="compte_a_rebours4"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours4", "Feb 18 20:30:00 2025", "Je crois que j'ai quelque chose à te donner (seulement si tu le demandes très poliement)");</script>
+                    <script type="text/javascript">compte_a_rebours("compte_a_rebours4", "Feb 18 20:25:00 2025", "Je crois que j'ai quelque chose à te donner (seulement si tu le demandes très poliement)");</script>
                 </div>
             </div>
 
@@ -53,7 +53,7 @@
                 <h2 id="toggle-heading5"><svg id="arrow5" viewBox="0 0 100 100"  width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 5</h2>
                 <div class="content" id="toggle-content5" style="display: none;">
                     <div class="compte_a_rebours" id="compte_a_rebours5"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours5", "Feb 18 23:00:00 2025","Pas encore trouvé...");</script>
+                    <script type="text/javascript">compte_a_rebours("compte_a_rebours5", "Feb 18 22:30:00 2025","C'était bien ? Moi je suis sûr que j'ai adoré (en même temps j'adore ce mec).<br>Perso je commence à avoir un peu faim, tu connais le Cercle Saint-Martin ? C'est un petit resto très sympa pas très loin d'ici");</script>
                 </div>
             </div>
 
@@ -61,7 +61,7 @@
                 <h2 id="toggle-heading6"><svg id="arrow6" viewBox="0 0 100 100"  width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 6</h2>
                 <div class="content" id="toggle-content6" style="display: none;">
                     <div class="compte_a_rebours" id="compte_a_rebours6"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours6", "Feb 18 23:59:00 2025", "Pas encore trouvé...");</script>
+                    <script type="text/javascript">compte_a_rebours("compte_a_rebours6", "Feb 18 23:59:00 2025", "Voila c'est fini, j'espère que c'était aussi bien que la dernière fois ! Direction le 36 rue de Picpus pour dire bonne nuit à Titi !");</script>
                 </div>
             </div>            
         </main>    
