--- a/index.html
+++ b/index.html
@@ -1,69 +1,32 @@
 <!DOCTYPE html>
 <html lang="fr">
     <head>
-        <meta charset="utf-8">
-        <title>MaïlaMonAmour</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>test</title>
         <link rel="stylesheet" href="style.css">
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="script.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-        <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/210/210545.png">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     </head>
-
     <body>
-        <header>
-            <svg xmlns="http://www.w3.org/2000/svg" width="120" height="120" viewBox="0 0 512 512"><title>ionicons-v5-f</title><path d="M352.92,80C288,80,256,144,256,144s-32-64-96.92-64C106.32,80,64.54,124.14,64,176.81c-1.1,109.33,86.73,187.08,183,252.42a16,16,0,0,0,18,0c96.26-65.34,184.09-143.09,183-252.42C447.46,124.14,405.68,80,352.92,80Z" style="fill:none;stroke:#fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:32px"/></svg>
-            <h1>MaïlaMonAmour</h1>
-        </header>
+        <div class="background">
+            <div class="one"></div>
+            <div class="two"></div>
+            <div class="three"></div>
+            <div class="four"></div>
+            <div class="five"></div>
+        </div>
 
         <main>
-            <div class="etape">
-                <h2 id="toggle-heading1"><svg id="arrow1" viewBox="0 0 100 100" width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 1</h2>
-                <div class="content" id="toggle-content1" style="display: none;">
-                    <div class="compte_a_rebours" id="compte_a_rebours1"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours1", "Feb 18 18:00:00 2025", "Tu peux rentrer tranquillement à la maison pour commencer.<br>De mon côté je devrais être là vers 19h, j'espère que je ne vais pas être trop en retard...");</script>
-                </div>
+            <div class="img"></div>
+    
+            <div class="links-container">
+                <img src="   https://cdn-icons-png.flaticon.com/512/4138/4138124.png " width="256" height="256" alt="" title="" class="img-small">
+                <a href="">zedkpocekopeczpo,erfzopkkofe"</a>
+                <a href="">ezkoedkekokoezkiedkoedkopefkopekop</a>
+                <a href="">zefkce^klpepk^celpcelpk</a>
             </div>
-
-            <div class="etape">
-                <h2 id="toggle-heading2"><svg id="arrow2" viewBox="0 0 100 100"  width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 2</h2>
-                <div class="content" id="toggle-content2" style="display: none;">
-                    <div class="compte_a_rebours" id="compte_a_rebours2"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours2", "Feb 18 19:00:00 2025", "Si t'es rentrée avant moi, j'espère que tu en a profité pour faire plein de câlin à Titi !<br>Tu peux aussi continuer le super puzzle chat de l'année dernière, ça serait vraiment dommage de pas le finir !<br>Si tu veux tu peux aussi te préparer parce qu'après on re-sort.");</script>
-                </div>
-            </div>
-
-            <div class="etape">
-                <h2 id="toggle-heading3"><svg id="arrow3" viewBox="0 0 100 100"  width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 3</h2>
-                <div class="content" id="toggle-content3" style="display: none;">
-                    <div class="compte_a_rebours" id="compte_a_rebours3"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours3", "Feb 18 19:50:00 2025", "Faut pas qu'on tarde à y aller, ça serait bien qu'on soient avant 20h30 au métro Strasbourg - Saint-Denis.<br>C'est le même endroit que la dernière fois, tu crois que c'est un coïncidence ? Tu penses qu'on va faire quoi ?");</script>
-                </div>
-            </div>
-            
-            <div class="etape">
-                <h2 id="toggle-heading4"><svg id="arrow4" viewBox="0 0 100 100" width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 4</h2>
-                <div class="content" id="toggle-content4" style="display: none;">
-                    <div class="compte_a_rebours" id="compte_a_rebours4"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours4", "Feb 18 20:25:00 2025", "Je crois que j'ai quelque chose à te donner (seulement si tu le demandes très poliement)");</script>
-                </div>
-            </div>
-
-            <div class="etape">
-                <h2 id="toggle-heading5"><svg id="arrow5" viewBox="0 0 100 100"  width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 5</h2>
-                <div class="content" id="toggle-content5" style="display: none;">
-                    <div class="compte_a_rebours" id="compte_a_rebours5"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours5", "Feb 18 22:30:00 2025","C'était bien ? Moi je suis sûr que j'ai adoré (en même temps j'adore ce mec).<br>Perso je commence à avoir un peu faim, tu connais le Cercle Saint-Martin ? C'est un petit resto très sympa pas très loin d'ici");</script>
-                </div>
-            </div>
-
-            <div class="etape">
-                <h2 id="toggle-heading6"><svg id="arrow6" viewBox="0 0 100 100"  width="30" height="30"><polygon points="50,0 100,100 0,100" fill="#fffff" transform="rotate(90 50 50)"/></svg>Étape 6</h2>
-                <div class="content" id="toggle-content6" style="display: none;">
-                    <div class="compte_a_rebours" id="compte_a_rebours6"></div>
-                    <script type="text/javascript">compte_a_rebours("compte_a_rebours6", "Feb 18 23:59:00 2025", "Voila c'est fini, j'espère que c'était aussi bien que la dernière fois ! Direction le 36 rue de Picpus pour dire bonne nuit à Titi !");</script>
-                </div>
-            </div>            
-        </main>    
+        </main>
     </body>
 </html>
